cmake_minimum_required(VERSION 3.15)
project(MasterPiece LANGUAGES C ASM)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m64")
set(CMAKE_ASM_FLAGS "${CMAKE_ASM_FLAGS} -m64")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -m64 -no-pie")
find_package(SDL2 REQUIRED)
find_package(SDL2_ttf REQUIRED)
add_executable(${PROJECT_NAME} src/sdl.s src/grid.s src/block.s src/font.s)
target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${SDL2_LIBRARIES} SDL2_ttf::SDL2_ttf)
